--- a/src/css/index.css
+++ b/src/css/index.css
@@ -27,7 +27,7 @@
 }
 body {
   overflow-x: hidden;
-  background-color: var(--background-color);
+  background-color:  #282c34;
   margin: 0;
   padding: 0;
   font-family: -apple-system, Manrope, sans-serif;
@@ -40,3 +40,53 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.App {
+  text-align: center;
+}
+
+.App-logo {
+  height: 40vmin;
+  fill: transparent;
+  width: 400px;
+}
+
+.stackoverflow {
+  width: 200px;
+  fill: transparent;
+  transition: all 0.4s ease-in-out;
+}
+.stackoverflow:hover {
+  fill: #E5B000;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-link {
+  color: #61dafb;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
