add module styules

--- a/src/pages/Pages.module.scss
+++ b/src/pages/Pages.module.scss
@@ -1,3 +1,83 @@
 .sass {
     display: grid;
 }
+
+.StUserForm{
+    display: grid;
+    align-items: center;
+    grid-column-gap: 12px;
+    grid-template-columns: 100px auto;
+    grid-row-gap: 18px;
+    padding: 22px;
+
+    &> label{
+        grid-column: span 2;
+        display: flex;
+        gap: 12px;
+        justify-content: space-between;
+        
+        &>div {
+            width: 100px;
+            padding-left: 8px;
+            display: flex;
+            align-items: center;
+            color: #61dafb;
+        }
+        &>input{
+            margin: 0 auto;
+        }
+    }
+    &>button[type='submit']{
+        width: 240px;
+        grid-column: span 2;
+        justify-self: center;
+    }
+
+}
+
+.FormInput{
+    height: 40px;
+    width: 320px;
+    padding: 2px 8px;
+    background-color: transparent;
+    border: 2px solid #111;
+    outline: none;
+    border-radius: 8px;
+    color: #888;
+
+
+    &:focus-visible {
+        border-color: #ccc;
+    }
+    &:-internal-autofill-selected{
+        background-color: #ff0 ;
+    }
+}
+
+.btn {
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 16px;
+    height: 44px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    border: none;
+    border-radius: 12px;
+    background: var(--blue);
+    color: var(--white);
+    padding: 12px ;
+    cursor: pointer;
+    outline: none;
+
+    transition: all 0.4s ease-in-out; 
+
+    &:hover, &:focus {
+    transition: all 0.4s ease-in-out; 
+    background: var(--hover-blue);
+    }
+    &:disabled {
+    background: var(--grey);
+    }
+}
