--- a/src/pages/Pages.module.scss
+++ b/src/pages/Pages.module.scss
@@ -47,12 +47,12 @@
     color: #888;
 
 
-    &:focus-visible {
-        border-color: #ccc;
-    }
-    &:-internal-autofill-selected{
-        background-color: #ff0 ;
-    }
+    // &:focus-visible {
+    //     border-color: #ccc;
+    // }
+    // &:-internal-autofill-selected{
+    //     background-color: #ff0 ;
+    // }
 }
 
 .btn {
@@ -99,6 +99,14 @@
     text-overflow: ellipsis; 
     white-space: nowrap; 
 
-    // margin-top: 1rem;
 
+}
+.err{
+    border-color: crimson;
+}
+.val{
+    border-color: #080 ;
+}
+.def{
+    border-color: #111 ;
 }
