--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -47,6 +47,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+a {
+  color: var(--accent-blue);
+}
 
 .App {
   text-align: center;
